--- a/Ex2-Assignment-Level-1/index.html
+++ b/Ex2-Assignment-Level-1/index.html
@@ -59,7 +59,7 @@
             <nav class="nav">
                 <ul class="nav-items flex">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a class="active" href="#">Gallery</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </nav>
@@ -110,6 +110,5 @@
         </div>
     </footer>
 
-    <script src="https://kit.fontawesome.com/bd07b7eea7.js" crossorigin="anonymous"></script>
 </body>
 </html>
